syntax="proto3";

package proto;

message Order {
    bytes Id = 1;
    bytes Address = 2;
    bytes TradeToken = 3;
    bytes QuoteToken = 4;
    bool   Side = 5; // false buy, true sell
    int32 Type = 6; // 0 limit order, 1 market order
    string Price = 7;
    bytes Quantity = 8;
    bytes Amount = 9; // QuoteAmount
    int32 Status = 10;
    int32 cancelReason = 11;
    int64 Timestamp = 12;
    bytes ExecutedQuantity = 13;
    bytes ExecutedAmount = 14;
    bytes refundToken = 15;
    bytes refundQuantity = 16; //refund trade/quote token
}

message OrderNode {
    Order Order = 1;
    repeated bytes ForwardOnLevel = 2;
    repeated bytes backwardOnLevel = 3;
}

message OrderListMeta {
    bytes Header = 1;
    bytes Tail = 2;
    int32 Length = 3;
    int32 Level = 4;
    repeated bytes ForwardOnLevel = 5;
}

message OrderBook {
    repeated string MarketSide = 1; //format : TradeToken|QuoteToken|Side
}

message Transaction {
    bytes Id = 1;
    bool TakerSide = 2;
    bytes TakerId = 3;
    bytes MakerId = 4;
    string Price = 5;
    bytes Quantity = 6;
    bytes Amount = 7;
    int64 Timestamp = 8;
}

